# raytracer

./: .gitignore  Cargo.toml  license  readme.MD  test.ppm
.github/workflows/: gh-pages.yml
src/: bad_rand.rs  bin.rs  camera.rs  image.rs  lib.rs  main.rs  material.rs  ray.rs  vec3.rs
src/hittable/: mod.rs  sphere.rs
www/: index.html  index.js  package-lock.json  package.json  rt.js  webpack.config.js
