[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"
authors = [ "Navin Mohan <navinmohan81@gmail.com>"]

[lib]
name = "raytracer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "raytracerbin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
quad-rand = "0.2.1"